# xsoc

./: .env  .env.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  app.py  config.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
example/crons/: test.yaml  test1.yaml
example/workflows/: test.yaml  test_new.yaml
plugins/built-in/web/: __init__.py
plugins/built-in/web/templates/: index.html
plugins/built-in/workflow/: __init__.py
plugins/builtin/cron/: __init__.py
plugins/builtin/web/: __init__.py
plugins/builtin/web/templates/: xsoc-base.html  xsoc-home.html  xsoc-xplugin.html
plugins/builtin/workflow/: __init__.py  tools.py
plugins/custom/hello_world/: __init__.py
xplugin/: logger.py  main.py  plugin.py  plugin_manager.py  pyproject.toml
xplugin/tests/: test_sample.py
