[project]
name = "xsoc"
version = "0.2.0"
description = "eXtensible Security Operations Center - A modern, plugin-based security operations platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.1",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "jinja2>=3.0.0",
    "pyyaml>=6.0.3",
]
